# aba-mining-hotelreviews

./: .gitignore  Makefile  README.md  README_ABA.md  compare_models.py  env.example  jupyter_config.py  pyproject.toml  pytest.ini  requirements.txt  requirements_aba.txt  restore_status.md  rgcn_link_predict.py  run_balanced_experiments.py  run_experiments.py  run_simplified_experiments.py  sample.tsv  train_bert.py  train_rgcn.py
config/: robust_experiment.yaml
notebook/: BERT_experiment.ipynb  dev_setup.py  eda.ipynb  gpt_contrary_analysis.ipynb  robust_experiment_design.ipynb
reports/: Executive_Summary_JP.md  RGCN_vs_BERT_Comparison_Report.md
results/aba_link_prediction/: balanced_experiment_log.txt  balanced_results.json  comprehensive_comparison.csv  comprehensive_report.md  experiment_log.txt  experiment_log_fixed.txt  experiment_report.md  final_report.md  hard_negative_experiment_log.txt  results_table.tex  robust_experiment_log.txt  robust_experiment_results.json  simplified_experiment_log.txt
scripts/: setup_dev.sh
scripts/experiments/: run_balanced_experiments.py  run_comprehensive_comparison.py  run_experiments.py  run_hard_negative_experiments.py  run_hard_negative_experiments_fixed.py  run_simplified_experiments.py
src/: __init__.py
src/aba_link_prediction/: __init__.py
src/aba_link_prediction/config/: config.yaml
src/aba_link_prediction/data_loaders/: __init__.py  aba_dataset.py  augmented_dataset.py  balanced_dataset.py  hard_negative_dataset.py
src/aba_link_prediction/evaluators/: __init__.py  metrics.py
src/aba_link_prediction/models/: __init__.py  bert_classifier.py  contrastive.py  rgcn.py
src/aba_link_prediction/trainers/: __init__.py  trainer.py
src/aba_link_prediction/utils/: __init__.py  utils.py
src/augmentation/: generate_negative.py
src/experiments/: __init__.py  cross_validation.py  run_robust_experiment.py
src/make_contrary_with_openai/: gpt_4omini_contMakeAnno.py  gpt_o4mini_contMakeAnno.py
src/model_defs/: models.py
src/model_training/: evaluate.py  train.py  train_bert.py
src/preprocess/: __init__.py  embed_node.py  extract_edge.py  make_clean_input.py  make_graph_dataset.py  save_graph.py
src/visualization/: __init__.py  plot_results.py
tests/: conftest.py
tests/integration/: __init__.py  test_experiment_pipeline.py
tests/unit/: __init__.py  test_cross_validation.py  test_experiment_id.py  test_models.py  test_visualization.py
