[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aba-mining"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
    "pydantic_settings==2.2.1",
    "tqdm==4.65.0", 
    "PyTDC", 
    "torch_geometric==2.5.3",
    "einops==0.8.0", 
    "transformers==4.52.4",
    "lightning==2.2.3", 
    "hydra-core==1.3.2",
    "PyGCL==0.1.2", 
    "comet-ml==3.41.0", 
    "xgboost==2.1.3",
    "pandas>=1.5.0",
    "networkx>=3.0",
    "matplotlib>=3.5.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.8.0",
    "torch>=2.0.0",
    "numpy>=1.20.0",
    "japanize-matplotlib>=1.1.0"
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "notebook>=6.4.0",
    "ipykernel>=6.0.0",
    "ipython>=8.0.0",
    "jupyterlab>=3.0.0",
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "pre-commit>=2.15.0"
]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["assets*", "benchmark*", "playground*", "scripts*", "tests*", "data*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.txt", "*.rst", "*.md"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "playground*", "scripts*", "tests*", "data*"]

# 開発モードでのパッケージ設定
[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}

# Black設定（コードフォーマッター）
[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # ディレクトリ
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | data
)/
'''

# isort設定（インポート整理）
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
